--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>FreenzaTech</title>
   </head>
   <body>
-    <h1>FreenzaTech</h1>
+    <h1>Working In Progress ........ From FreenzaTech</h1>
   </body>
 </html>
