--- a/Animation/Animation.html
+++ b/Animation/Animation.html
@@ -31,7 +31,8 @@
     }
     .textanimated-text {
       font-family: "Quantico", sans-serif;
-      font-size: 18px;
+      /* font-size: 18px; */
+      font-size: 2vw;
       color: #fff;
 
       animation: scaleUpAndChangeColor 6s ease-in-out forwards;
