--- a/Website/about.html
+++ b/Website/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>DGital - Digital Agency HTML Template</title>
+    <title>FreenzaTech | About</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -66,7 +66,7 @@
           class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0"
         >
           <a href="" class="navbar-brand p-0">
-            <h1 class="m-0">DGital</h1>
+            <h1 class="m-0">FreenzaTech</h1>
             <!-- <img src="assets/img/logo.png" alt="Logo"> -->
           </a>
           <button
@@ -83,7 +83,7 @@
               <a href="about.html" class="nav-item nav-link active">About</a>
               <a href="service.html" class="nav-item nav-link">Service</a>
               <a href="project.html" class="nav-item nav-link">Project</a>
-              <div class="nav-item dropdown">
+              <!-- <div class="nav-item dropdown">
                 <a
                   href="#"
                   class="nav-link dropdown-toggle"
@@ -94,14 +94,16 @@
                   <a href="team.html" class="dropdown-item">Our Team</a>
                   <a href="testimonial.html" class="dropdown-item"
                     >Testimonial</a
-                  >
+                  > 
                   <a href="404.html" class="dropdown-item">404 Page</a>
                 </div>
-              </div>
+              </div> -->
               <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
-            <a href="" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block"
-              >Get Started</a
+            <a
+              href="applycourse.html"
+              class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block"
+              >Apply For Course</a
             >
           </div>
         </nav>
