--- a/Website/applycourse.html
+++ b/Website/applycourse.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>FreenzaTech | Contact</title>
+    <title>FreenzaTech | Apply For Course</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="" name="keywords" />
     <meta content="" name="description" />
@@ -91,7 +91,7 @@
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div> -->
-              <a href="contact.html" class="nav-item nav-link active"
+              <a href="contact.html" class="nav-item nav-link"
                 >Contact</a
               >
             </div>
@@ -107,24 +107,10 @@
           <div class="container my-5 py-5 px-lg-5">
             <div class="row g-5 py-5">
               <div class="col-12 text-center">
-                <h1 class="text-white animated slideInDown">Contact</h1>
+                <h1 class="text-white animated slideInDown">
+                  Apply For Course
+                </h1>
                 <hr class="bg-white mx-auto mt-0" style="width: 90px" />
-                <nav aria-label="breadcrumb">
-                  <ol class="breadcrumb justify-content-center">
-                    <li class="breadcrumb-item">
-                      <a class="text-white" href="#">Home</a>
-                    </li>
-                    <li class="breadcrumb-item">
-                      <a class="text-white" href="#">Pages</a>
-                    </li>
-                    <li
-                      class="breadcrumb-item text-white active"
-                      aria-current="page"
-                    >
-                      Contact
-                    </li>
-                  </ol>
-                </nav>
               </div>
             </div>
           </div>
@@ -137,7 +123,7 @@
         <div class="container py-5 px-lg-5">
           <div class="wow fadeInUp" data-wow-delay="0.1s">
             <p class="section-title text-secondary justify-content-center">
-              <span></span>Contact Us<span></span>
+              <!-- <span></span>Apply For Course<span></span> -->
             </p>
             <h1 class="text-center mb-5">Contact For Any Query</h1>
           </div>
@@ -148,7 +134,6 @@
                   The contact form is currently inactive. Get a functional and
                   working contact form with Ajax & PHP in a few minutes. Just
                   copy and paste the files, add a little code and you're done.
-                  <a href="https://htmlcodex.com/contact-form">Download Now</a>.
                 </p>
                 <form>
                   <div class="row g-3">
