--- a/Website/index.html
+++ b/Website/index.html
@@ -79,9 +79,7 @@
                         <div class="col-lg-6 text-center text-lg-start">
                             <h1 class="text-white mb-4 animated slideInDown">A Digital Agency Of Inteligents & Creative
                                 People</h1>
-                            <p class="text-white pb-3 animated slideInDown">Tempor rebum no at dolore lorem clita rebum
-                                rebum ipsum rebum stet dolor sed justo kasd. Ut dolor sed magna dolor sea diam. Sit diam
-                                sit justo amet ipsum vero ipsum clita lorem</p>
+                            <p class="text-white pb-3 animated slideInDown">Shape Tomorrow with Us: Embrace the Future, Elevate Your Business Online, and Achieve Your Goals</p>
                             <a href=""
                                 class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Read
                                 More</a>
