--- a/Website/index.html
+++ b/Website/index.html
@@ -83,7 +83,7 @@
                             <a href=""
                                 class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3 animated slideInLeft">Read
                                 More</a>
-                            <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact
+                            <a href="contact.html" class="btn btn-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact
                                 Us</a>
                         </div>
                         <div class="col-lg-6 text-center text-lg-start">
@@ -104,24 +104,21 @@
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-laptop-code text-primary mb-4"></i>
                             <h5 class="mb-3">Design & Development</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet
-                                diam sed stet lorem.</p>
+                            <p class="m-0">Unlocking Digital Excellence: Where Design Meets Development to Transform Your Ideas into Stunning Apps and Websites, Amplifying Business Success and Crafting Innovative Platforms for All.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-search text-primary mb-4"></i>
                             <h5 class="mb-3">SEO & Backlinks</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet
-                                diam sed stet lorem.</p>
+                            <p class="m-0">Elevate Your Visibility and Authority: Masterful SEO and Backlinks Strategies to Propel Your Website to the Top of Search Engines and Dominate the Online Landscape.</p>
                         </div>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="feature-item bg-light rounded text-center p-4">
                             <i class="fa fa-3x fa-mail-bulk text-primary mb-4"></i>
                             <h5 class="mb-3">Digital Marketing</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet
-                                diam sed stet lorem.</p>
+                            <p class="m-0">Catalyze Your Triumph: Unleash the Power of Digital Marketing to Fuel Your Business's Expansion, Captivate Your Audience, and Uncover Untapped Potential in the Online Realm.</p>
                         </div>
                     </div>
                     
