--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
+<!--     <meta
       name="description"
       content="Welcome to our Website. Explore our Innovative and Dynamic Web Solutions Crafted to Enhance Your Online Experience."
-    />
+    /> -->
+    <meta name="keywords" content="FreenzaTech, app development, website design, SEO services, digital agency">
+    <meta name="author" content="Freenzatech">
+    <meta property="og:title" content="FreenzaTech - App Development, Website Design, SEO Services">
+<meta property="og:url" content="https://freenzatech.com/">
+    <meta property="og:description" content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today.">
+    <meta name="description" content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today.">
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>FreenzaTech</title>
+    <title>FreenzaTech - App Development, Website Development</title>
     <script defer="defer" src="/static/js/main.4bfd6f95.js"></script>
     <link href="/static/css/main.7de5203b.css" rel="stylesheet" />
   </head>
