--- a/Website/index.html
+++ b/Website/index.html
@@ -65,7 +65,7 @@
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div> -->
-                        <a href="contact.html" class="nav-item nav-link">Contact</a>
+                        <a href="contact.html" class="nav-item nav-link">Contacts</a>
                     </div>
                     <a href="applycourse.html"
                     class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block"
