--- a/Website/index.html
+++ b/Website/index.html
@@ -65,7 +65,7 @@
                                 <a href="404.html" class="dropdown-item">404 Page</a>
                             </div>
                         </div> -->
-                        <a href="contact.html" class="nav-item nav-link">Contacts</a>
+                        <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
                     <a href="applycourse.html"
                     class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block"
@@ -77,7 +77,7 @@
                 <div class="container px-lg-5">
                     <div class="row g-5 align-items-end">
                         <div class="col-lg-6 text-center text-lg-start">
-                            <h1 class="text-white mb-4 animated slideInDown">A Digital Agency Of Inteligents & Creative
+                            <h1 class="text-white mb-4 animated slideInDown">A Digital Agency Of Inteligents & Creatives
                                 People</h1>
                             <p class="text-white pb-3 animated slideInDown">Shape Tomorrow with Us: Embrace the Future, Elevate Your Business Online, and Achieve Your Goals</p>
                             <a href=""
