--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <meta name="keywords" content="FreenzaTech, app development, website design, SEO services, digital agency">
+    <meta
+      name="keywords"
+      content="FreenzaTech, Web Development, App Development, Brand Identity, Marketing, Web Design, Packaging Design, SEO, Digital Solutions, Creative Technology"
+    />
     <meta name="author" content="Freenzatech">
     <meta property="og:title" content="FreenzaTech - App Development, Website Design, SEO Services">
     <meta property="og:url" content="https://freenzatech.com/">
