--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       content="FreenzaTech, Web Development, App Development, Brand Identity, Marketing, Web Design, Packaging Design, SEO, Digital Solutions, Creative Technology"
     />
     <meta name="author" content="Freenzatech">
-    <meta property="og:title" content="FreenzaTech - App Development, Website Design, SEO Services">
+    <meta property="og:title" content="FreenzaTech - Leading in Web and App Development Solutions">
     <meta property="og:url" content="https://freenzatech.com/">
     <meta property="og:description"
         content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today.">
     <meta name="description"
-        content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today.">
+        content="FreenzaTech - Your Premier Destination for Web Development, App Development, Brand Identity, Marketing, Web Design, Packaging Design, and SEO. Elevate your business with our innovative digital solutions and creative expertise.">
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>FreenzaTech - App Development, Website Development</title>
