--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         content="FreenzaTech - Your Premier Destination for Web Development, App Development, Brand Identity, Marketing, Web Design, Packaging Design, and SEO. Elevate your business with our innovative digital solutions and creative expertise.">
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>FreenzaTech - App Development, Website Development</title>
+    <title>FreenzaTech - Leading in Web and App Development Solutions</title>
     <link href="assets/favicon.ico" rel="icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
