--- a/index.html
+++ b/index.html
@@ -6,29 +6,50 @@
     <meta name="theme-color" content="#000000" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <meta name="keywords" content="FreenzaTech, app development, website design, SEO services, digital agency">
-    <meta name="author" content="Freenzatech">
-    <meta property="og:title" content="FreenzaTech - App Development, Website Design, SEO Services">
-    <meta property="og:url" content="https://freenzatech.com/">
-    <meta property="og:description"
-        content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today.">
-    <meta name="description"
-        content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today.">
+    <meta
+      name="keywords"
+      content="FreenzaTech, Web Development, App Development, Brand Identity, Marketing, Web Design, Packaging Design, SEO, Digital Solutions, Creative Technology"
+    />
+    <meta name="author" content="Freenzatech" />
+    <meta
+      property="og:title"
+      content="FreenzaTech - Leading in Web and App Development Solutions"
+    />
+    <meta property="og:url" content="https://freenzatech.com/" />
+    <meta
+      property="og:description"
+      content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today."
+    />
+    <meta
+      name="description"
+      content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today."
+    />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>FreenzaTech - App Development, Website Development</title>
-    <link href="assets/favicon.ico" rel="icon">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&family=Jost:wght@500;600;700&display=swap"
-        rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-    <link href="assets/lib/animate/animate.min.css" rel="stylesheet">
-    <link href="assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="assets/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
+    <link href="assets/favicon.ico" rel="icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500&family=Jost:wght@500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css"
+      rel="stylesheet"
+    />
+    <link href="assets/lib/animate/animate.min.css" rel="stylesheet" />
+    <link
+      href="assets/lib/owlcarousel/assets/owl.carousel.min.css"
+      rel="stylesheet"
+    />
+    <link href="assets/lib/lightbox/css/lightbox.min.css" rel="stylesheet" />
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="assets/css/style.css" rel="stylesheet" />
     <script defer="defer" src="/static/js/main.ef0c0ed9.js"></script>
     <link href="/static/css/main.8d5609da.css" rel="stylesheet" />
   </head>
