--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="author" content="Freenzatech">
     <meta property="og:title" content="FreenzaTech - App Development, Website Design, SEO Services">
 <meta property="og:url" content="https://freenzatech.com/">
+    <meta name="google-site-verification" content="ZzCwjBgtyOmPbyrOsTF6ES3Ij-L7k1D27dFKxxLQVXQ" />
     <meta property="og:description" content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today.">
     <meta name="description" content="FreenzaTech is a leading digital agency specializing in app development, website design, and SEO services. Contact us to boost your online presence today.">
     <link rel="apple-touch-icon" href="/logo192.png" />
