--- a/Website/index.html
+++ b/Website/index.html
@@ -599,7 +599,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <p class="section-title text-white h5 mb-4">Newsletter<span></span></p>
-                        <p>Lorem ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit
+                        <p>check ipsum dolor sit amet elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit
                             non vulpu</p>
                         <div class="position-relative w-100 mt-3">
                             <input class="form-control border-0 rounded-pill w-100 ps-4 pe-5" type="text"
