--- a/Website/index.html
+++ b/Website/index.html
@@ -134,10 +134,8 @@
                 <div class="row g-5 align-items-center">
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                         <p class="section-title text-secondary">About Us<span></span></p>
-                        <h1 class="mb-5">#1 Digital solution with 10 years of experience</h1>
-                        <p class="mb-4">Diam dolor diam ipsum et tempor sit. Aliqu diam amet diam et eos labore. Clita
-                            erat ipsum et lorem et sit, sed stet no labore lorem sit clita duo justo eirmod magna dolore
-                            erat amet</p>
+                        <h1 class="mb-5">Innovative Digital Solutions for Your Business</h1>
+                        <p class="mb-4">At FreenzaTech, we are dedicated to delivering top-notch digital solutions tailored to your business needs. Our team is passionate about web development, app development, and logo design, combining creativity and technology to help your business thrive in the digital world.</p>
                         <div class="skill mb-4">
                             <div class="d-flex justify-content-between">
                                 <p class="mb-2">Digital Marketing</p>
@@ -185,22 +183,22 @@
                 <div class="row g-4">
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.1s">
                         <i class="fa fa-certificate fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">5</h1>
                         <p class="text-white mb-0">Years Experience</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                         <i class="fa fa-users-cog fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">10-15</h1>
                         <p class="text-white mb-0">Team Members</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
                         <i class="fa fa-users fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">5</h1>
                         <p class="text-white mb-0">Satisfied Clients</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.7s">
                         <i class="fa fa-check fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">16</h1>
                         <p class="text-white mb-0">Compleate Projects</p>
                     </div>
                 </div>
@@ -213,8 +211,7 @@
         <div class="container-xxl py-5">
             <div class="container py-5 px-lg-5">
                 <div class="wow fadeInUp" data-wow-delay="0.1s">
-                    <p class="section-title text-secondary justify-content-center"><span></span>Our
-                        Services<span></span></p>
+                    <p class="section-title text-secondary justify-content-center"><span></span>Our Services<span></span></p>
                     <h1 class="text-center mb-5">What Solutions We Provide</h1>
                 </div>
                 <div class="row g-4">
@@ -224,8 +221,7 @@
                                 <i class="fa fa-search fa-2x"></i>
                             </div>
                             <h5 class="mb-3">SEO Optimization</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet
-                                diam sed stet lorem.</p>
+                            <p class="m-0">Boost your website’s visibility on search engines with our expert SEO services, driving more organic traffic to your site.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -235,8 +231,7 @@
                                 <i class="fa fa-laptop-code fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Web Design</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet
-                                diam sed stet lorem.</p>
+                            <p class="m-0">Create stunning and responsive websites that offer a seamless user experience and reflect your brand’s identity.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -246,8 +241,7 @@
                                 <i class="fab fa-facebook-f fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Social Media Marketing</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet
-                                diam sed stet lorem.</p>
+                            <p class="m-0">Engage with your audience and grow your brand’s presence on social media platforms with our targeted marketing strategies.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -257,8 +251,7 @@
                                 <i class="fa fa-mail-bulk fa-2x"></i>
                             </div>
                             <h5 class="mb-3">Email Marketing</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet
-                                diam sed stet lorem.</p>
+                            <p class="m-0">Reach your customers directly with personalized email campaigns designed to boost engagement and drive conversions.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -268,8 +261,7 @@
                                 <i class="fa fa-thumbs-up fa-2x"></i>
                             </div>
                             <h5 class="mb-3">PPC Advertising</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet
-                                diam sed stet lorem.</p>
+                            <p class="m-0">Increase your reach and attract more customers with our effective pay-per-click advertising strategies.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -279,14 +271,14 @@
                                 <i class="fab fa-android fa-2x"></i>
                             </div>
                             <h5 class="mb-3">App Development</h5>
-                            <p class="m-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet
-                                diam sed stet lorem.</p>
+                            <p class="m-0">Develop robust and user-friendly mobile applications tailored to meet your business needs and enhance customer engagement.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+        
         <!-- Service End -->
 
 
