--- a/Website/index.html
+++ b/Website/index.html
@@ -188,7 +188,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.3s">
                         <i class="fa fa-users-cog fa-3x text-secondary mb-3"></i>
-                        <h1 class="text-white mb-2" data-toggle="counter-up">10-15</h1>
+                        <h1 class="text-white mb-2" data-toggle="counter-up">10</h1>
                         <p class="text-white mb-0">Team Members</p>
                     </div>
                     <div class="col-md-6 col-lg-3 text-center wow fadeIn" data-wow-delay="0.5s">
@@ -248,20 +248,20 @@
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="service-item d-flex flex-column text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-mail-bulk fa-2x"></i>
+                                <i class="fa fa-headset fa-2x"></i>
                             </div>
-                            <h5 class="mb-3">Email Marketing</h5>
-                            <p class="m-0">Reach your customers directly with personalized email campaigns designed to boost engagement and drive conversions.</p>
+                            <h5 class="mb-3">24/7 Support</h5>
+                            <p class="m-0">Our dedicated team is available 24/7 to assist you with any issues or questions, ensuring uninterrupted service and support.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <div class="service-item d-flex flex-column text-center rounded">
                             <div class="service-icon flex-shrink-0">
-                                <i class="fa fa-thumbs-up fa-2x"></i>
+                                <i class="fa fa-pencil-ruler fa-2x"></i>
                             </div>
-                            <h5 class="mb-3">PPC Advertising</h5>
-                            <p class="m-0">Increase your reach and attract more customers with our effective pay-per-click advertising strategies.</p>
+                            <h5 class="mb-3">Graphic Designing</h5>
+                            <p class="m-0">Create visually stunning graphics that effectively communicate your brand's message and captivate your audience.</p>
                             <a class="btn btn-square" href=""><i class="fa fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -278,6 +278,7 @@
                 </div>
             </div>
         </div>
+        
         
         <!-- Service End -->
 
