--- a/Website/about.html
+++ b/Website/about.html
@@ -271,7 +271,7 @@
               data-wow-delay="0.1s"
             >
               <i class="fa fa-certificate fa-3x text-secondary mb-3"></i>
-              <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+              <h1 class="text-white mb-2" data-toggle="counter-up">5</h1>
               <p class="text-white mb-0">Years Experience</p>
             </div>
             <div
@@ -279,7 +279,7 @@
               data-wow-delay="0.3s"
             >
               <i class="fa fa-users-cog fa-3x text-secondary mb-3"></i>
-              <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+              <h1 class="text-white mb-2" data-toggle="counter-up">10</h1>
               <p class="text-white mb-0">Team Members</p>
             </div>
             <div
@@ -287,7 +287,7 @@
               data-wow-delay="0.5s"
             >
               <i class="fa fa-users fa-3x text-secondary mb-3"></i>
-              <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+              <h1 class="text-white mb-2" data-toggle="counter-up">14</h1>
               <p class="text-white mb-0">Satisfied Clients</p>
             </div>
             <div
@@ -295,7 +295,7 @@
               data-wow-delay="0.7s"
             >
               <i class="fa fa-check fa-3x text-secondary mb-3"></i>
-              <h1 class="text-white mb-2" data-toggle="counter-up">1234</h1>
+              <h1 class="text-white mb-2" data-toggle="counter-up">16</h1>
               <p class="text-white mb-0">Compleate Projects</p>
             </div>
           </div>
@@ -304,7 +304,7 @@
       <!-- Facts End -->
 
       <!-- Team Start -->
-      <div class="container-xxl py-5">
+      <!-- <div class="container-xxl py-5">
         <div class="container py-5 px-lg-5">
           <div class="wow fadeInUp" data-wow-delay="0.1s">
             <p class="section-title text-secondary justify-content-center">
@@ -396,7 +396,7 @@
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Team End -->
 
       <!-- Footer Start -->
